--- a/journal.org
+++ b/journal.org
@@ -100,3 +100,11 @@ FAIT :
 - faire le rendu graphique dans le terminal (peut-être plus simple pour 
   comparer les résultat sur des cartouches de test)
 - gestion de la superposition des sprites, dans le bon ordre, pour calculer la valeur de chaque pixel
+
+19/04/2023
+FAIT : 
+- rendu graphique (mais problèmes de rendu des sprites)
+À FAIRE :
+- corriger les problèmes de rendu (inversion des sprites par ex.)
+- événements clavier
+- ça devrait fonctionner sur un jeu simple (sans le son)
